[gd_scene load_steps=12 format=3 uid="uid://dq4uh6see762d"]

[ext_resource type="Texture2D" uid="uid://ut3abc034wuw" path="res://assets/IngeUI/UIBackground/Background2.0.png" id="1_agktw"]
[ext_resource type="Script" uid="uid://roc6fg7jqgfx" path="res://ui/menu/StudentMenu/main_menu.gd" id="1_fsnij"]
[ext_resource type="FontFile" uid="uid://dxnpu45uo35il" path="res://assets/IngeUI/LilitaOne-Regular.ttf" id="2_fsnij"]
[ext_resource type="Texture2D" uid="uid://bv8aqm3y8ptdm" path="res://assets/IngeUI/UIIcons/play.png" id="3_61j2i"]
[ext_resource type="Texture2D" uid="uid://dca73njn43dkn" path="res://assets/IngeUI/UIIcons/redo.png" id="4_8cy6t"]
[ext_resource type="Texture2D" uid="uid://bguvvnle6sjok" path="res://assets/IngeUI/UIIcons/joystick.png" id="5_jbnbq"]
[ext_resource type="Texture2D" uid="uid://cvpmm56cwn0ea" path="res://assets/IngeUI/UIIcons/arrowleft.png" id="6_jttsa"]


[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06t4h"]
bg_color = Color(0.68096, 0.398922, 0.143259, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.231373, 0.121569, 0.0392157, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu7sn"]
bg_color = Color(0.964706, 0.741176, 0.101961, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.545098, 0.301961, 0.0235294, 1)
corner_radius_top_left = 28
corner_radius_top_right = 28
corner_radius_bottom_right = 28
corner_radius_bottom_left = 28
expand_margin_left = 35.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0
shadow_size = 12
shadow_offset = Vector2(0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jix8l"]
bg_color = Color(0.852567, 0.5145, 0.0546667, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.545098, 0.301961, 0.0235294, 1)
corner_radius_top_left = 28
corner_radius_top_right = 28
corner_radius_bottom_right = 28
corner_radius_bottom_left = 28
expand_margin_left = 35.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vrkn"]
bg_color = Color(0.898649, 0.577291, 0.14695, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.545098, 0.301961, 0.0235294, 1)
corner_radius_top_left = 28
corner_radius_top_right = 28
corner_radius_bottom_right = 28
corner_radius_bottom_left = 28
expand_margin_left = 35.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0
shadow_size = 3

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fsnij")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_agktw")
expand_mode = 3

[node name="HeaderPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -723.0
offset_top = 45.0
offset_right = 700.0
offset_bottom = 139.0
grow_horizontal = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_06t4h")

[node name="Label" type="Label" parent="HeaderPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -37.5
offset_right = 176.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.945247, 0.715264, 0.562705, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.231373, 0.121569, 0.0392157, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("2_fsnij")
theme_override_font_sizes/font_size = 64
text = "MAIN MENU"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -176.0
offset_right = 150.0
offset_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(600, 260)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 65
metadata/_edit_use_anchors_ = true

[node name="BtnNewGame" type="Button" parent="CenterContainer/Menu"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.92549, 0.796078, 1)
theme_override_colors/font_outline_color = Color(0.415686, 0.211765, 0.0313726, 1)
theme_override_constants/outline_size = 4
theme_override_constants/h_separation = 12
theme_override_fonts/font = ExtResource("2_fsnij")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/focus = SubResource("StyleBoxFlat_7vrkn")
text = "NEW GAME"
icon = ExtResource("3_61j2i")

[node name="BtnResume" type="Button" parent="CenterContainer/Menu"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.92549, 0.796078, 1)
theme_override_colors/font_outline_color = Color(0.415686, 0.211765, 0.0313726, 1)
theme_override_constants/outline_size = 4
theme_override_constants/h_separation = -72
theme_override_fonts/font = ExtResource("2_fsnij")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/focus = SubResource("StyleBoxFlat_7vrkn")
text = "RESUME
"
icon = ExtResource("4_8cy6t")

[node name="BtnControls" type="Button" parent="CenterContainer/Menu"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.92549, 0.796078, 1)
theme_override_colors/font_outline_color = Color(0.415686, 0.211765, 0.0313726, 1)
theme_override_constants/outline_size = 4
theme_override_constants/h_separation = -72
theme_override_fonts/font = ExtResource("2_fsnij")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/focus = SubResource("StyleBoxFlat_7vrkn")
text = "CONTROLS"
icon = ExtResource("5_jbnbq")

[node name="BtnBack" type="Button" parent="CenterContainer/Menu"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.92549, 0.796078, 1)
theme_override_colors/font_outline_color = Color(0.415686, 0.211765, 0.0313726, 1)
theme_override_constants/outline_size = 4
theme_override_constants/h_separation = -72
theme_override_fonts/font = ExtResource("2_fsnij")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/focus = SubResource("StyleBoxFlat_7vrkn")
text = "BACK"
icon = ExtResource("6_jttsa")
